--- a/.github/workflows/ci-cd-docker.yml
+++ b/.github/workflows/ci-cd-docker.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t rappipet:${{ github.sha }} .
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/rappipet:${{ github.sha }} .
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
@@ -26,7 +26,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Push image
-        run: docker push rappipet:${{ github.sha }}
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/rappipet:${{ github.sha }}
 
       # Puedes agregar aquí pasos para ejecutar tests o subir la imagen a un registry
       # - name: Run tests
@@ -38,4 +38,3 @@ jobs:
       #     password: ${{ secrets.DOCKERHUB_TOKEN }}
       # - name: Push image
       #   run: docker push rappiPet:latest
- 
